advanced server browser added (buggy; need reading over

--- a/TODO.txt
+++ b/TODO.txt
@@ -20,4 +20,4 @@
 
 - menu transition change <= in progress
 
-- server searcher <= in progress
+- advanced server browser <= buggily complete (needs reading over)
